Сделал страницу подтверждения и связь с ней

--- a/src/confirmation.html
+++ b/src/confirmation.html
@@ -17,17 +17,11 @@
     <div class="container text-center my-5">
       <div class="row">
         <div class="col-lg-5 col-md-8 col-sm-6 mx-auto font">
-          <h1>Для начала игры нужно выбрать интересующую вас мифологию:</h1>
+          <h3 class="mb-5">Готовы ли вы отправиться в увлекательное путешествие по миру древней мифологии и проверить свои знания о богах, героях и монстрах?</h3>
+          <h3>Для вас мы подготовили 10 вопросов по выбранной мифологии. Начнем?</h3>
           <div class="d-grid gap-5 col-lg-10 col-md-10 mx-auto mt-5">
-            <button class="btn btn-outline-light btn-lg" type="button">
-              Скандинавская
-            </button>
-            <button class="btn btn-outline-light btn-lg" type="button">
-              Греческая
-            </button>
-            <button class="btn btn-outline-light btn-lg" type="button">
-              Египетская
-            </button>
+            <a class="btn btn-outline-light btn-lg" href="">Начать</a>
+            <a class="btn btn-outline-light btn-lg" href="index.html">Вернуться</a>
           </div>
         </div>
       </div>
