--- a/src/confirmation.html
+++ b/src/confirmation.html
@@ -20,7 +20,7 @@
           <h3 class="mb-5">Готовы ли вы отправиться в увлекательное путешествие по миру древней мифологии и проверить свои знания о богах, героях и монстрах?</h3>
           <h3>Для вас мы подготовили 10 вопросов по выбранной мифологии. Начнем?</h3>
           <div class="d-grid gap-5 col-lg-10 col-md-10 mx-auto mt-5">
-            <a class="btn btn-outline-light btn-lg" href="">Начать</a>
+            <a class="btn btn-outline-light btn-lg" href="game.html">Начать</a>
             <a class="btn btn-outline-light btn-lg" href="index.html">Вернуться</a>
           </div>
         </div>
