--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,21 @@
         <div class="col-lg-5 col-md-8 col-sm-6 mx-auto font">
           <h1>Для начала игры нужно выбрать интересующую вас мифологию:</h1>
           <div class="d-grid gap-5 col-lg-10 col-md-10 mx-auto mt-5">
-            <a class="btn btn-outline-light btn-lg" href="confirmation.html">Скандинавская</a>
-            <a class="btn btn-outline-light btn-lg" href="confirmation.html">Греческая</a>
-            <a class="btn btn-outline-light btn-lg" href="confirmation.html">Египетская</a>
+            <a
+              class="btn btn-outline-light btn-lg"
+              href="confirmation.html?theme=scn"
+              >Скандинавская</a
+            >
+            <a
+              class="btn btn-outline-light btn-lg"
+              href="confirmation.html?theme=gre"
+              >Греческая</a
+            >
+            <a
+              class="btn btn-outline-light btn-lg"
+              href="confirmation.html?theme=egpt"
+              >Египетская</a
+            >
           </div>
         </div>
       </div>
