--- a/src/game.html
+++ b/src/game.html
@@ -11,42 +11,42 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <title>Викторина по мифологиям</title>
+    <title>Викторина по мифологии</title>
   </head>
-  <body>
+  <body id="body">
     <div class="block">
-        <div class="quiz">
-          <div id="title" class="quiz__title">Мировые мифологии</div>
-          <div class="quiz__progress-wrap">
-            <div class="quiz__progress">
-              <div id="progress-fill" class="quiz__progress-fill"></div>
-            </div>
-            <div class="quiz__progress-questions">
-              <strong id="question-number">1</strong>
-              <span>/</span>
-              <span id="total-questions">10</span>
-            </div>
+      <div class="quiz">
+        <div id="title" class="quiz__title">Мировая мифология</div>
+        <div class="quiz__progress-wrap">
+          <div class="quiz__progress">
+            <div id="progress-fill" class="quiz__progress-fill"></div>
           </div>
-          <div id="question-wrap" class="quiz__question">
-            <span id="question">Как программировать?</span>
-          </div>
-          <div id="answers" class="quiz__answers">
-            <div class="quiz__answer">Вариант 1</div>
-            <div class="quiz__answer">Вариант 2</div>
-            <div class="quiz__answer">Вариант 3</div>
-            <div class="quiz__answer">Вариант 4</div>
-          </div>
-          <button id="next" class="quiz__button">Следующий вопрос</button>
-          <div id="result" class="quiz__result">
-            <div class="quiz__result-info">
-              <span>Верных ответов</span><br>
-              <span id="valid-answers" class="quiz__result-num">2</span>
-              <span>из</span>
-              <span id="result-total-questions" class="quiz__result-num">3</span>
-            </div>
-            <a class="btn btn-dark btn-lg" href="index.html">Играть снова</a>
+          <div class="quiz__progress-questions">
+            <strong id="question-number">1</strong>
+            <span>/</span>
+            <span id="total-questions">10</span>
           </div>
         </div>
+        <div id="question-wrap" class="quiz__question">
+          <span id="question">Как программировать?</span>
+        </div>
+        <div id="answers" class="quiz__answers">
+          <div class="quiz__answer">Вариант 1</div>
+          <div class="quiz__answer">Вариант 2</div>
+          <div class="quiz__answer">Вариант 3</div>
+          <div class="quiz__answer">Вариант 4</div>
+        </div>
+        <button id="next" class="quiz__button">Следующий вопрос</button>
+        <div id="result" class="quiz__result">
+          <div class="quiz__result-info">
+            <span>Верных ответов</span><br />
+            <span id="valid-answers" class="quiz__result-num">2</span>
+            <span>из</span>
+            <span id="result-total-questions" class="quiz__result-num">3</span>
+          </div>
+          <a class="btn btn-dark btn-lg" href="index.html">Играть снова</a>
+        </div>
+      </div>
     </div>
     <script src="data/questions.js"></script>
     <script src="game.js"></script>
