Пофиксил баг с progress-bar

--- a/src/game.html
+++ b/src/game.html
@@ -16,33 +16,28 @@
   <body id="body">
     <div class="block">
       <div class="quiz">
-        <div id="title" class="quiz__title">Мировая мифология</div>
+        <div id="title" class="quiz__title"></div>
         <div class="quiz__progress-wrap">
           <div class="quiz__progress">
             <div id="progress-fill" class="quiz__progress-fill"></div>
           </div>
           <div class="quiz__progress-questions">
-            <strong id="question-number">1</strong>
+            <strong id="question-number"></strong>
             <span>/</span>
-            <span id="total-questions">10</span>
+            <span id="total-questions"></span>
           </div>
         </div>
         <div id="question-wrap" class="quiz__question">
-          <span id="question">Как программировать?</span>
+          <span id="question"></span>
         </div>
-        <div id="answers" class="quiz__answers">
-          <div class="quiz__answer">Вариант 1</div>
-          <div class="quiz__answer">Вариант 2</div>
-          <div class="quiz__answer">Вариант 3</div>
-          <div class="quiz__answer">Вариант 4</div>
-        </div>
+        <div id="answers" class="quiz__answers"></div>
         <button id="next" class="quiz__button">Следующий вопрос</button>
         <div id="result" class="quiz__result">
           <div class="quiz__result-info">
             <span>Верных ответов</span><br />
-            <span id="valid-answers" class="quiz__result-num">2</span>
+            <span id="valid-answers" class="quiz__result-num"></span>
             <span>из</span>
-            <span id="result-total-questions" class="quiz__result-num">3</span>
+            <span id="result-total-questions" class="quiz__result-num"></span>
           </div>
           <a class="btn btn-dark btn-lg" href="index.html">Играть снова</a>
         </div>
