добавил реакции на набранное количество верных ответов

--- a/src/game.html
+++ b/src/game.html
@@ -34,6 +34,7 @@
         <button id="next" class="quiz__button">Следующий вопрос</button>
         <div id="result" class="quiz__result">
           <div class="quiz__result-info">
+            <h4 id="result-comment"></h4>
             <span>Верных ответов</span><br />
             <span id="valid-answers" class="quiz__result-num"></span>
             <span>из</span>
